added two buttons

--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@ a:hover, a:active {
 
   <a href="https://ibirdies.app.link/EWg3SQoCrzb" target="_blank">This is a link 2</a>
 
+  <a href="https://dofasting.app.link/home" target="_blank">This is a link 3</a>
+
 </body>
 </html>
