--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ a:hover, a:active {
    <body>
 
      <p>A link styled as a button:</p>
-  <a href="https://ibirdies.app.link/ALP7Q6Tf1yb" target="_blank">This is a link 1</a>
+  <a href="https://ibirdies.app.link/ALP7Q6Tf1yb">This is a link 1</a>
 
-  <a href="https://ibirdies.app.link/EWg3SQoCrzb" target="_blank">This is a link 2</a>
+  <a href="https://ibirdies.app.link/EWg3SQoCrzb">This is a link 2</a>
 
   <a href="https://dofasting.app.link/home" target="_blank">This is a link 3</a>
 
