added multi session journey

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ branch.init('key_live_obZ8HYNNZgHB6qw5a66zVmdbssjl7wc4', options, function(err, 
 });
 
          // init Branch
-         branch.init('key_live_obZ8HYNNZgHB6qw5a66zVmdbssjl7wc4');
+         //branch.init('key_live_obZ8HYNNZgHB6qw5a66zVmdbssjl7wc4');
       </script>
 
       <style>
