added other pages

--- a/index.html
+++ b/index.html
@@ -36,12 +36,11 @@ a:hover, a:active {
    </head>
    <body>
 
-     <p>A link styled as a button:</p>
-  <a href="https://ibirdies.app.link/ALP7Q6Tf1yb">This is a link 1</a>
+     <p>Home Page</p>
 
-  <a href="https://ibirdies.app.link/EWg3SQoCrzb">This is a link 2</a>
+     <button onclick="window.location.href = 'index1.html';">Page 1</button>
 
-  <a href="https://dofasting.app.link/home" target="_blank">This is a link 3</a>
+     <button onclick="window.location.href = 'index2.html';">Page 2</button>
 
 </body>
 </html>
