--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             extendedJourneysAssistExpiryTime : 500000 // TTL value in milliseconds for the referring Branch link. Defaults to 7 days
 
 };
-        branch.init('key_live_bj83Q6QO9pTz2Fx5dYYrNndprBea9sn3', options, function(err, data) {
+        branch.init('key_test_pnW9O9JM8eRsWEs4g0ZCTnlkqxhhYwCa', options, function(err, data) {
           console.log(err, data);
         });
 
@@ -51,6 +51,8 @@ a:hover, a:active {
    <body>
 
      <p>Home Page</p>
+
+     <input type="button" value="Dogs app" onclick="window.location.href='https://pawanpal1.app.link/dz0aOukDlyb';">
 
      <button onclick="window.location.href = 'index1.html';">Page 1</button>
 
