--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ a:hover, a:active {
 
      <p>Home Page</p>
 
-     <input type="button" value="Dogs app" onclick="window.location.href='https://cleartrip.app.link/4d749a31-a2a7-4f45-a278-f1a3584a6ae7_1708521469052';">
+     <input type="button" value="Cleartrip" onclick="window.location.href='https://cleartrip.app.link/4d749a31-a2a7-4f45-a278-f1a3584a6ae7_1708521469052';">
 
      <button onclick="window.location.href = 'index1.html';">Page 1</button>
 
