--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ a:hover, a:active {
 
      <input type="button" value="Insta testing" onclick="window.location.href='intent://fk.dl/de_wv_CL%7Csem_--_https://www.flipkart.com/grocery-supermart-store~q~marketplace=GROCERY_--_cmpid_--_content_appretar_fb_Grocery_DPA?_branch_referrer=H4sIAAAAAAAAA8soKSkottLXr8ovKdJLLCjQy8nMy9YvyPUxdPQ3r3T1TAIA4rxKOSEAAAA%3D&link_click_id=1300772219093829656#Intent;scheme=flipkart;package=com.flipkart.android;S.browser_fallback_url=https%3A%2F%2Fplay.google.com%2Fstore%2Fapps%2Fdetails%3Fid%3Dcom.flipkart.android&referrer=link_click_id%253D1300772219093829656;S.market_referrer=link_click_id%3D1300772219093829656;B.branch_intent=true;end';">
 
+     <button onclick="window.location.href = 'https://3fvkf-hpark.branchbeta.link/Ab46W1sivFb?%24uri_redirect_mode=2';">BMF</button>
+     
      <button onclick="window.location.href = 'index1.html';">Page 1</button>
 
      <button onclick="window.location.href = 'index2.html';">Page 2</button>
