added market link

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ a:hover, a:active {
 
      <button onclick="window.location.href = 'https://on.hellostake.com/veEAp8BVkEb';">Redirection check</button>
 
-     <button onclick="window.location.href = 'market://details?id=com.springhealth.cherubai';">Market link</button>
+     <button onclick="window.location.href = 'market://details?id=com.miniclip.eightballpool';">Market link</button>
 
 
 
