--- a/tooltip-demo.html
+++ b/tooltip-demo.html
@@ -4,31 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Tooltip Demo</title>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <style>
+        /* Set a transparent background and center the content */
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            background: transparent; /* Transparent background */
+            background-color: transparent;
             min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            padding: 20px;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
         }
 
-        /* Custom styles for a blue Bootstrap popover */
+        /* Custom styles for the blue popover */
         :root {
             --bs-popover-bg: #0d6efd;
             --bs-popover-border-color: #0a58ca;
-            --bs-popover-header-bg: #0a58ca;
-            --bs-popover-header-color: #fff;
-            --bs-popover-body-color: #fff;
+            --bs-popover-header-bg: #0d6efd; /* Unified to blue */
+            --bs-popover-header-color: #0d6efd;
+            --bs-popover-body-color: #0d6efd;
             --bs-popover-arrow-border: var(--bs-popover-border-color);
         }
 
         .popover {
-            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+            box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15);
         }
 
         .popover-header {
@@ -36,10 +38,7 @@
             font-weight: 600;
         }
 
-        .popover-body {
-            font-size: 0.95rem;
-        }
-
+        /* A small, invisible element to anchor the popover to */
         #tooltip-anchor {
             width: 1px;
             height: 1px;
@@ -48,44 +47,44 @@
 </head>
 <body>
 
-    <!-- Anchor element for the tooltip/popover -->
-    <div id="tooltip-anchor"></div>
+<!-- 1. The invisible anchor element for our popover -->
+<div id="tooltip-anchor"></div>
 
-    <!-- Popover Content -->
-    <div id="popover-content" class="d-none">
-        <div class="d-flex align-items-center">
-            <div class="flex-shrink-0 me-3">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16">
-                    <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
-                </svg>
-            </div>
-            <div class="flex-grow-1">
-                Mobile, electric bill recharge, etc
-            </div>
+<!-- 2. The HTML content for the popover, hidden by default -->
+<div id="popover-content" class="d-none">
+    <div class="d-flex align-items-center">
+        <div class="flex-shrink-0 me-3">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16">
+                <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+            </svg>
+        </div>
+        <div class="flex-grow-1">
+            Save on every item.
         </div>
     </div>
+</div>
 
-    <!-- Bootstrap JS and Popper.js -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+<!-- Bootstrap JS Bundle (includes Popper.js) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const tooltipAnchor = document.getElementById('tooltip-anchor');
-            const popoverContent = document.getElementById('popover-content').innerHTML;
+<script>
+    // 3. JavaScript to initialize and show the popover once the page loads
+    document.addEventListener('DOMContentLoaded', function () {
+        const anchor = document.getElementById('tooltip-anchor');
+        const content = document.getElementById('popover-content').innerHTML;
 
-            const popover = new bootstrap.Popover(tooltipAnchor, {
-                title: 'Save on every bill payment!',
-                content: popoverContent,
-                html: true,
-                placement: 'bottom',
-                trigger: 'manual',
-            });
-
-            // Show the popover immediately
-            popover.show();
+        const popover = new bootstrap.Popover(anchor, {
+            title: 'Daily discounted items!',
+            content: content,
+            html: true,
+            placement: 'bottom-start', // Positions arrow on bottom-left
+            trigger: 'manual' // We will show it manually
         });
-    </script>
+
+        // Show the popover as soon as it's initialized
+        popover.show();
+    });
+</script>
 
 </body>
 </html>
